# argos2-RoboNetSim

./: README.md  build.sh  make_distribution.sh
argos2/: launch_argos
argos2-footbot/: CMakeLists.txt  README  constants.hpp  data_9.csv  meeting_data_5.csv  meeting_data_6.csv  received_data_5.csv  received_data_6.csv  test_plot_deliveryRatio.py
argos2-footbot/cmake/: FindARGoS.cmake
argos2-footbot/controllers/: CMakeLists.txt
argos2-footbot/controllers/footbot_baseStation/: CMakeLists.txt  footbot_baseStation.cc  footbot_baseStation.h
argos2-footbot/controllers/footbot_central/: footbot_central.cpp  footbot_central.h  mEngine.cpp  mEngine.h
argos2-footbot/controllers/footbot_mission_agents/: CMakeLists.txt  footbot_mission_agents.cpp  footbot_mission_agents.h  position_calculator.cc
argos2-footbot/controllers/footbot_navigator/: CMakeLists.txt  footbot_navigator.cc
argos2-footbot/controllers/footbot_relay/: CMakeLists.txt  footbot_relay.cc  footbot_relay.h
argos2-footbot/controllers/include/: constants.hpp  generate_data.cpp
argos2-footbot/xml/: footbot_diffusion_example.xml
argos2-footbot_navigator/: CMakeLists.txt
argos2-footbot_navigator/controllers/: CMakeLists.txt
argos2-footbot_navigator/controllers/footbot_central/: CMakeLists.txt  generate_lcm.sh
argos2-footbot_navigator/controllers/footbot_navigator_robonetsim_example/: CMakeLists.txt  footbot_navigator_robonetsim_example.cc  footbot_navigator_robonetsim_example.h
argos2-footbot_navigator/controllers/navigation/: CMakeLists.txt
argos2-footbot_navigator/controllers/navigation/beans/: node.h
argos2-footbot_navigator/controllers/navigation/client/: nav_client.cpp  nav_client.h
argos2-footbot_navigator/controllers/navigation/lcm/: .waypoint_sendlist_bm.py.swo
argos2-footbot_navigator/controllers/navigation/lcm/waypointlist/: timestamped_waypoint_list_t.hpp
argos2-footbot_navigator/xml/: footbot_navigator_robonetsim_test.xml  footbot_navigator_test.xml
argos2-footbot_test/: CMakeLists.txt  README
argos2-footbot_test/controllers/: CMakeLists.txt
argos2-footbot_test/controllers/footbot_baseStation/: CMakeLists.txt  footbot_baseStation.cc  footbot_baseStation.h
argos2-footbot_test/controllers/footbot_diffusion_example/: CMakeLists.txt  footbot_diffusion_example.cpp  footbot_diffusion_example.h
argos2-footbot_test/controllers/footbot_relay/: CMakeLists.txt  footbot_relay.cc  footbot_relay.h
argos2-footbot_test/xml/: diffusion_example.xml  footbot_diffusion_example.xml  footbot_navigator_robonetsim_test.xml  footbot_navigator_test.xml
argos2-footbot_testing/: CMakeLists.txt  ReadMe  Untitled.ipynb  Untitled1.ipynb  data2.csv  delayTime.csv  deliveryRatio.py  goal2.csv  outfile  output.txt  plot_data.py  position2.csv  position3.csv  positionSpiral.csv  timePlot.ipynb  timePlot.py  timePlot_allRun.py  timestep3.csv
argos2-footbot_testing/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  timePlot-checkpoint.ipynb
argos2-footbot_testing/controllers/: CMakeLists.txt
argos2-footbot_testing/controllers/footbot_central/: CMakeLists.txt
argos2-footbot_testing/controllers/footbot_mission_agents/: CMakeLists.txt  footbot_mission_agents.cpp  footbot_mission_agents.h
argos2-footbot_testing/controllers/footbot_navigator/: footbot_navigator.h
argos2-footbot_testing/controllers/footbot_relay/: CMakeLists.txt  footbot_relay.cc  footbot_relay.h  spiralPattern.cpp  spiralPattern.h
argos2-footbot_testing/controllers/navigation/: CMakeLists.txt
argos2-footbot_testing/embedding/: CMakeLists.txt
argos2-footbot_testing/xml/: footbot_diffusion_example.xml
argos2/common/control_interface/: CMakeLists.txt  ci_wifi_actuator.h  ci_wifi_sensor.h
argos2/common/utility/: argos_random.cpp
argos2/simulator/: CMakeLists.txt  argos_command_line_arg_parser.h
argos2/simulator/actuators/: CMakeLists.txt  range_and_bearing_actuator.cpp  wifi_actuator.cpp  wifi_actuator.h  wifi_actuator_dual.cpp  wifi_actuator_dual.h  wifi_actuator_extern.cpp  wifi_actuator_extern.h
argos2/simulator/dynamic_linking/: dynamic_linking_manager.cpp  loop_functions.cpp
argos2/simulator/factories/: actuators_factory.cpp
argos2/simulator/sensors/: CMakeLists.txt  wifi_sensor.h  wifi_sensor_dual.cpp  wifi_sensor_dual.h  wifi_sensor_extern.cpp  wifi_sensor_extern.h
argos2/simulator/space/: space.cpp  space_visitor_add.h
common/: CMakeLists.txt
common/control_interface/: ci_controller.h  ci_wifi_sensor.h
common/utility/: CMakeLists.txt  argos_random.h
common/utility/datatypes/: datatypes.h
common/utility/logging/: argos_log.h
common/utility/math/: matrix3x3.cpp  matrix3x3.h  vector2.h  vector3.h
example/: CMakeLists.txt
example/controllers/footbot_diffusion/: CMakeLists.txt  footbot_diffusion.cpp  footbot_diffusion.h
example/xml/: diffusion_5_wifi_ns3.xml
ns3_config/: ofdm54g-lab.conf
simulator/: argos_command_line_arg_parser.cpp  main.cpp
simulator/actuators/: wifi_actuator.cpp  wifi_actuator.h  wifi_actuator_extern.h
simulator/dynamic_linking/: CMakeLists.txt  dynamic_linking_manager.h  loop_functions.h
simulator/factories/: CMakeLists.txt
simulator/physics_engines/dynamics2d/: dynamics2d_engine.cpp  dynamics2d_remove_visitor.h
simulator/physics_engines/dynamics3d/: CMakeLists.txt  dynamics3d_add_visitor.h  dynamics3d_remove_visitor.h
simulator/physics_engines/kinematics2d/: CMakeLists.txt  kinematics2d_add_visitor.h  kinematics2d_collision_rectangle.cpp
simulator/physics_engines/pointmass3d/: pointmass3d_add_visitor.h
simulator/sensors/: wifi_sensor.cpp  wifi_sensor.h  wifi_sensor_extern.cpp
simulator/sensors/booth/: booth_presence_sensor.cpp
simulator/sensors/e-puck/: epuck_front_camera_sensor.cpp
simulator/sensors/eye-bot/: eyebot_altitude_sensor.cpp  eyebot_altitude_sensor.h
simulator/space/: CMakeLists.txt  space_visitor_remove.h
simulator/space/entities/: booth_entity.cpp  box_entity.cpp  cylinder_entity.cpp  cylinder_entity.h  embodied_entity.h  eyebot_entity.cpp  footbot_entity.cpp  wifi_equipped_entity.h  (+1 more)
simulator/visualizations/: CMakeLists.txt
(+102 files in other folders)
